--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Dolov. <songyan_shi@163.com>",
   "scripts": {
     "dev": "plasmo dev",
-    "build": "plasmo build",
+    "build": "plasmo build && plasmo package",
     "package": "plasmo package"
   },
   "dependencies": {
