--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dayjs": "^1.11.11",
     "plasmo": "0.88.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tldts": "^6.1.85"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
